Fix wide header style mobile tagline wrapping
Can no longer push the mobile menu button out of the screen.

--- a/src/scss/customize/header-style-wide.scss
+++ b/src/scss/customize/header-style-wide.scss
@@ -42,12 +42,17 @@
   &__title {
     color: var(--site-title-heading-color);
     font: 900 var(--site-title-font-size)/1 var(--ff-site-title);
+    letter-spacing: 0;
   }
 
   &__tagline {
     color: var(--site-title-tagline-color);
-    font: 500 var(--site-title-tagline-font-size)/1 var(--ff-site-title);
-    white-space: nowrap;
+    font: 500 var(--site-title-tagline-font-size)/1.3 var(--ff-site-title);
+    letter-spacing: 0;
     margin-top: .5em;
+
+    @include bp(1024px) {
+      white-space: nowrap;
+    }
   }
 }
